--- a/src/main/resources/stylesheets/index.css
+++ b/src/main/resources/stylesheets/index.css
@@ -13,7 +13,7 @@
  * See the License for the specific language governing permissions and
  * limitations under the License.
  */
-@import "../stylesheets/layout.css";
+@import "layout.css";
 
 .index {
     background-color: var(--main-page-color);
