--- a/src/main/resources/stylesheets/layout.css
+++ b/src/main/resources/stylesheets/layout.css
@@ -13,7 +13,7 @@
  * See the License for the specific language governing permissions and
  * limitations under the License.
  */
-@import "../stylesheets/horizontal-nav-bar.css";
+@import "horizontal-nav-bar.css";
 
 :root {
     --dark-text: darkred;
